# photoshare-api

./: .env.example  .gitignore  CHECKLIST.md  Dockerfile  INSTRUCTIONS  LICENSE  PHOTOS_MODULE_README  README.md  docker-compose.yml  init-db.sql  pyproject.toml  requirements.txt  test_admin.py  test_api.py
alembic/: env.py
alembic/versions/: 271da6bba801_init_users_table.py  31004cf89c64_create_photos_and_comments_tables.py  568e520c7a55_add_rating_table.py  5fa19e4a8fd0_add_roles_table.py  a146f1990338_add_is_active_to_users.py  a1b2c3d4e5f6_add_photos_tags_transformations.py  add_user_is_active_and_role.py
scripts/: create-test-db.ps1  create-test-db.sh
src/: main.py
src/admin/: routes.py
src/auth/: dependencies.py  routes.py  schemas.py  security.py  token_blacklist.py  utils.py
src/comments/: models.py  repository.py  routes.py  schemas.py
src/conf/: settings.py
src/database/: __init__.py  base.py  db.py  redis.py
src/photos/: __init__.py  models.py  repository.py  routes.py  schemas.py
src/ratings/: models.py  repository.py  routes.py  schemas.py
src/services/: cloudinary.py  qrcode.py
src/users/: enums.py  models.py  repository.py  routes.py  schemas.py
tests/: conftest.py  test_main.py  test_photos_crud_search.py
tests/admin/: test_routes.py
tests/auth/: test_dependencies.py  test_routes.py  test_security.py  test_token_blacklist.py
tests/comments/: test_repository.py  test_routes.py
tests/photos/: test_repository.py  test_routes.py
tests/raitings/: test_repository.py  test_routes.py
tests/ratings/: test_repository.py  (+1 more)
(+4 files in other folders)
