[project]
name = "photoshare-api"
version = "0.1.0"
description = ""
authors = [
    {name = "TStakhniuk",email = "tpstakhniuk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.126.0,<0.127.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "cloudinary (>=1.44.1,<2.0.0)",
    "qrcode (>=8.2,<9.0)",
    "pillow (>=12.0.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
fakeredis = "^2.33.0"
faker = "^39.0.0"
pytest-cov = "^7.0.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-v --asyncio-mode=auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
concurrency = ["greenlet", "thread"]
source = ["src"]
